--- a/src/PowerPlaywright/PowerPlaywright.csproj
+++ b/src/PowerPlaywright/PowerPlaywright.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PowerPlaywright.Controls\PowerPlaywright.Model.csproj" />
+    <ProjectReference Include="..\PowerPlaywright.Controls\PowerPlaywright.Framework.csproj" />
+    <ProjectReference Include="..\PowerPlaywright.Framework\PowerPlaywright.Framework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
