--- a/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
+++ b/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PowerPlaywright.Controls\PowerPlaywright.Framework.csproj">
+    <ProjectReference Include="..\PowerPlaywright.Framework\PowerPlaywright.Framework.csproj">
       <Private>false</Private>
       <ExcludeAssets>runtime</ExcludeAssets>
     </ProjectReference>
