--- a/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
+++ b/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard20</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
