--- a/tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj
+++ b/tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj
@@ -28,5 +28,11 @@
     <ProjectReference Include="..\..\src\PowerPlaywright.Strategies\PowerPlaywright.Strategies.csproj" />
     <ProjectReference Include="..\..\src\PowerPlaywright\PowerPlaywright.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <None Include="Resources/**/*.*" >
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 
 </Project>
