test: fix coverage not reported for integration tests

--- a/tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj
+++ b/tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\PowerPlaywright.Strategies\PowerPlaywright.Strategies.csproj" />
     <ProjectReference Include="..\..\src\PowerPlaywright\PowerPlaywright.csproj" />
     <ProjectReference Include="..\solution\PowerPlaywright.TestApp.Model\PowerPlaywright.TestApp.Model.csproj" />
   </ItemGroup>
