--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: Power Playwright
 on:
   push:
     branches: [ $default-branch ]
+  pull_request: 
+    branches: [ $default-branch ]
     
 jobs:
   build:
