ci: update step condition

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
         with:
           name: unit-test-results
           path: TestResults
-        if: ${{ steps.test.outcome != 'skipped' }}
+        if: ${{ always() }}
     
