--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request: 
     branches: [ main ]
-    
+
 jobs:
   build:
     runs-on: windows-latest
@@ -20,14 +20,27 @@ jobs:
       - name: Restore dependencies
         run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build -c Release --no-restore
       - name: Run unit tests
         id: test
-        run: dotnet test tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj --logger html --no-build --no-restore --verbosity normal --results-directory TestResults
+        run: dotnet test tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj --logger html --no-build --results-directory TestResults
       - name: Upload dotnet test results
         uses: actions/upload-artifact@v4
         with:
           name: unit-test-results
           path: TestResults
         if: ${{ always() }}
+      - name: Pack
+        run: dotnet pack --no-restore --output nupkg
+      - name: Upload packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: nupkg
+          path: nupkg
+      - name: Upload integration tests
+        uses: actions/upload-artifact@v4
+        with:
+          name: integration-tests
+          path: tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0
+
     
