--- a/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
+++ b/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard20</TargetFramework>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
