--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,7 @@ jobs:
           path: tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0
   test:
     runs-on: windows-latest
+    needs: build
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
