--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
           name: integration-tests
           path: integration-tests
       - name: Setup Playwright
-        run: integration-tests/playwright.ps1 install
+        run: integration-tests/playwright.ps1 install --with-deps
       - name: Run integration tests
         run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger html --logger console --results-directory TestResults -- MSTest.Parallelize.Workers=4 Playwright.LaunchOptions.Headless=true
       - name: Upload integration test results
