--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,14 +57,20 @@ jobs:
           name: integration-tests
           path: integration-tests
       - name: Setup Playwright
-        run: integration-tests/playwright.ps1 install --with-deps
+        run: integration-tests/playwright.ps1 install chromium --with-deps
       - name: Run integration tests
-        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger html --logger console --results-directory TestResults -- MSTest.Parallelize.Workers=4 Playwright.LaunchOptions.Headless=true
+        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --results-directory TestResults -- MSTest.Parallelize.Workers=4 Playwright.LaunchOptions.Headless=true
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
         with:
           name: integration-test-results
           path: TestResults
         if: ${{ always() }}
+      - name: Upload traces
+        uses: actions/upload-artifact@v4
+        with:
+          name: playwright-traces
+          path: playwright-traces
+        if: ${{ failure() }}
 
     
