--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           path: tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0
           include-hidden-files: true
   test:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     steps:
       - name: Setup .NET
