--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
           path: tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0
           include-hidden-files: true
   test:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Setup .NET
@@ -73,12 +73,12 @@ jobs:
           path: TestResults
         if: ${{ always() }}
       - name: Login to Azure
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }} 
       - name: Upload traces to Blob Storage
         if: ${{ failure() }}
-        uses: azure/CLI@v1
+        uses: azure/CLI@v2
         with:
           inlineScript: az storage blob upload-batch --account-name '${{ secrets.AZURE_STORAGE_ACCOUNTNAME }}' --auth-mode key -d 'playwright-traces' -s 'playwright-traces' --destination-path '${{ github.workflow }}/${{ github.run_id }}_${{ github.run_attempt }}' 
       - name: Logout of Azure
