--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,9 @@ jobs:
           name: integration-tests
           path: integration-tests
       - name: Setup Playwright
-        run: integration-tests/playwright.ps1 install chromium --with-deps
+        run: |
+          chmod +x integration-tests/playwright.ps1
+          integration-tests/playwright.ps1 install chromium --with-deps
         shell: pwsh
       - name: Run integration tests
         run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger console --logger html --results-directory TestResults -- NUnit.NumberOfTestWorkers=2 Playwright.LaunchOptions.Headless=true
