--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
           path: integration-tests
       - name: Setup Playwright
         run: |
-          chmod +x integration-tests/playwright.ps1
+          chmod +x integration-tests/.playwright/node/linux-x64/node
           integration-tests/playwright.ps1 install chromium --with-deps
         shell: pwsh
       - name: Run integration tests
