--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,17 +63,12 @@ jobs:
         shell: pwsh
       - name: Run integration tests
         id: runTests
-        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger console --logger html --results-directory TestResults -- NUnit.NumberOfTestWorkers=2 Playwright.LaunchOptions.Headless=true
+        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger console --logger html --results-directory TestResults -- NUnit.NumberOfTestWorkers=${{ vars.TEST_NUMBEROFTESTWORKERS }} Playwright.LaunchOptions.Headless=true
         env:
           KEYVAULT__URL: ${{ secrets.TEST_KEYVAULT_URL}}
           KEYVAULT__TENANTID: ${{ secrets.TEST_KEYVAULT_TENANTID}}
           KEYVAULT__CLIENTID: ${{ secrets.TEST_KEYVAULT_CLIENTID}} 
           KEYVAULT__CLIENTSECRET: ${{ secrets.TEST_KEYVAULT_CLIENTSECRET}} 
-      - name: Upload integration test packages feed (temporary)
-        uses: actions/upload-artifact@v4
-        with:
-          name: integration-test-packages
-          path: integration-tests/packages
         if: ${{ always() }}
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
