--- a/tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj
+++ b/tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj
@@ -30,7 +30,13 @@
   </ItemGroup>
   
   <ItemGroup>
-    <None Include="Resources/**/*.*" >
+    <None Include="Resources/**/*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update=".runsettings">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
