--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         run: dotnet build -c Release --no-restore
       - name: Run unit tests
         id: test
-        run: dotnet test tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj -c Release --logger console --logger html --no-build --results-directory TestResults
+        run: dotnet test tests/PowerPlaywright.UnitTests/PowerPlaywright.UnitTests.csproj -c Release --logger console --logger html --no-build --results-directory TestResults --collect:"XPlat code coverage"
       - name: Upload unit test results
         uses: actions/upload-artifact@v4
         with:
@@ -63,7 +63,7 @@ jobs:
         shell: pwsh
       - name: Run integration tests
         id: runTests
-        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger console --logger html --results-directory TestResults --collect="XPlat Code Coverage" --settings integration-tests/.runsettings -- NUnit.NumberOfTestWorkers=${{ vars.TEST_NUMBEROFTESTWORKERS }} Playwright.LaunchOptions.Headless=true
+        run: dotnet test integration-tests/PowerPlaywright.IntegrationTests.dll --logger console --logger html --results-directory TestResults --collect:"XPlat code coverage" --settings integration-tests/.runsettings -- NUnit.NumberOfTestWorkers=${{ vars.TEST_NUMBEROFTESTWORKERS }} Playwright.LaunchOptions.Headless=true
         env:
           KEYVAULT__URL: ${{ secrets.TEST_KEYVAULT_URL}}
           KEYVAULT__TENANTID: ${{ secrets.TEST_KEYVAULT_TENANTID}}
@@ -90,3 +90,17 @@ jobs:
       - name: Logout of Azure
         if: ${{ failure() && steps.azureLogin.conclusion == 'success' }}
         run: az logout
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ build, test ]
+    steps:
+      - name: Download NuGet package
+        uses: actions/download-artifact@v4
+        with:
+          name: nupkg
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: 8.0.x
+      - name: Push to NuGet
+        run: dotnet nuget push "nupkg/**/*.nupkg" --api-key "${{ secrets.NUGET_APIKEY }}" --source https://api.nuget.org/v3/index.json --skip-duplicate
