--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,6 +94,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nupkg
+          path: nupkg
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
