--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,6 +88,7 @@ jobs:
         run: az logout
   deploy:
     runs-on: ubuntu-latest
+    if: ${{ success() && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
     needs: [ build, test ]
     steps:
       - name: Download NuGet package
