--- a/.github/workflows/power-playwright.yml
+++ b/.github/workflows/power-playwright.yml
@@ -5,6 +5,19 @@ on:
     branches: [ main ]
   pull_request: 
     branches: [ main ]
+  workflow_dispatch: 
+    inputs:
+      skipTestJob:
+        default: false
+        type: boolean
+        description: Skip test job
+      publishPreRelease:
+        default: false
+        type: boolean
+        description: Publish pre-release package
+
+concurrency: 
+  group: test
 
 jobs:
   build:
@@ -40,6 +53,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ success() && (github.event_name != 'workflow_dispatch' || !inputs.skipTestJob) }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -88,7 +102,7 @@ jobs:
         run: az logout
   deploy:
     runs-on: ubuntu-latest
-    if: ${{ success() && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+    if: ${{ success() && (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'workflow_dispatch' && inputs.publishPreRelease) }}
     needs: [ build, test ]
     steps:
       - name: Download NuGet package
