--- a/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
+++ b/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
@@ -2,7 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard20</TargetFramework>
-    <EnableDynamicLoading>true</EnableDynamicLoading>
+    <IsPackable>true</IsPackable>
+    <EnablePackageValidation>true</EnablePackageValidation>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Authors>Max Ewing</Authors>
+    <Description>A library of concrete control implementations for internal use by Power Playwright.</Description>
+    <PackageTags>power-playwright</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageIcon>icon.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,14 +23,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="GitVersion.MsBuild" Version="5.12.0">
+    <PackageReference Include="GitVersion.MsBuild" Version="6.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <None Include="icon.png" Pack="true" PackagePath="/" />
+  </ItemGroup>
+  
   <ItemGroup>
     <Content Include="platform-reference.json" />
   </ItemGroup>
