--- a/tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj
+++ b/tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj
@@ -8,6 +8,7 @@
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
     <UserSecretsId>4ebdd741-9421-4d58-80d1-3d5dd7139403</UserSecretsId>
+    <PlaywrightPlatform>all</PlaywrightPlatform>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,8 +21,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
-    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.44.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
+    <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.49.0" />
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.1.27" />
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
@@ -44,14 +45,24 @@
     <TargetNupkgFiles Include="$(OutputPath)\PowerPlaywright.Strategies.*.nupkg" />
   </ItemGroup>
 
-  <Target Name="CleanStrategies" BeforeTargets="PackStrategies">
-    <Delete Files="@(NupkgFiles)" />
+  <ItemGroup>
+    <None Update=".runsettings">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <Target Name="CleanStrategies" BeforeTargets="Build">
     <Delete Files="@(TargetNupkgFiles)" />
   </Target>
 
   <Target Name="PackStrategies" AfterTargets="Build">
-    <MSBuild Projects="..\..\src\PowerPlaywright.Strategies\PowerPlaywright.Strategies.csproj" Targets="Pack" Properties="Configuration=$(Configuration);" />
-    <Copy SourceFiles="@(SourceNupkgFiles)" DestinationFolder="$(OutputPath)" />
+    <MSBuild Projects="..\..\src\PowerPlaywright.Strategies\PowerPlaywright.Strategies.csproj" Targets="Pack" Properties="Configuration=$(Configuration);" RebaseOutputs="true" />
   </Target>
 
+  <Target Name="CopyStrategies" AfterTargets="PackStrategies">
+    <ItemGroup>
+      <SourceNupkgFiles Include="..\..\src\PowerPlaywright.Strategies\bin\$(Configuration)\PowerPlaywright.Strategies.*.nupkg" />
+    </ItemGroup>
+    <Copy SourceFiles="@(SourceNupkgFiles)" DestinationFolder="$(OutputPath)" />
+  </Target>
 </Project>
