build: pack symbols separately

--- a/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
+++ b/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard20</TargetFramework>
     <IsPackable>false</IsPackable>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
