--- a/src/PowerPlaywright/PowerPlaywright.csproj
+++ b/src/PowerPlaywright/PowerPlaywright.csproj
@@ -5,6 +5,7 @@
     <IsPackable>true</IsPackable>
     <EnablePackageValidation>true</EnablePackageValidation>
     <TargetsForTfmSpecificBuildOutput>$(TargetsForTfmSpecificBuildOutput);IncludeProjectReferenceDlls</TargetsForTfmSpecificBuildOutput>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <PropertyGroup>
