--- a/.github/workflows/power-playwright.yml
+++ b/.github/workflows/power-playwright.yml
@@ -54,7 +54,7 @@ jobs:
           path: TestResults
         if: ${{ always() }}
       - name: Pack
-        run: dotnet pack --no-restore --output nupkg
+        run: dotnet pack --no-restore --output nupkg -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
       - name: Upload packages
         uses: actions/upload-artifact@v4
         with:
