--- a/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
+++ b/src/PowerPlaywright.Strategies/PowerPlaywright.Strategies.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard20</TargetFramework>
     <IsPackable>true</IsPackable>
     <EnablePackageValidation>true</EnablePackageValidation>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -30,11 +31,11 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <None Include="icon.png" Pack="true" PackagePath="/" />
   </ItemGroup>
-  
+
   <ItemGroup>
     <Content Include="platform-reference.json" />
   </ItemGroup>
