build: enable analysers

--- a/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
+++ b/src/PowerPlaywright.Framework/PowerPlaywright.Framework.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard20</TargetFramework>
     <IsPackable>false</IsPackable>
     <DebugType>portable</DebugType>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
