--- a/tests/PowerPlaywright.IntegrationTests.PageObjects/PowerPlaywright.TestApp.PageObjects.csproj
+++ b/tests/PowerPlaywright.IntegrationTests.PageObjects/PowerPlaywright.TestApp.PageObjects.csproj
@@ -6,6 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Extensions\**" />
+    <EmbeddedResource Remove="Extensions\**" />
+    <None Remove="Extensions\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\PowerPlaywright.Framework\PowerPlaywright.Framework.csproj" />
     <ProjectReference Include="..\..\src\PowerPlaywright\PowerPlaywright.csproj" />
   </ItemGroup>
