--- a/.github/workflows/power-playwright.yml
+++ b/.github/workflows/power-playwright.yml
@@ -61,8 +61,17 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: ${{ success() && (github.event_name != 'workflow_dispatch' || inputs.runTestJob) }}
+    strategy:
+      fail-fast: false
+      matrix:
+        test_url:
+          - TEST_ENVIRONMENT_NEWLOOK_URL
+          - TEST_ENVIRONMENT_OLDLOOK_URL
+        include:
+          - name: new-look
+          - name: old-look
     concurrency: 
-      group: test
+      group: test-${{ matrix.name }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -84,6 +93,7 @@ jobs:
         id: runTests
         run: dotnet test tests/PowerPlaywright.IntegrationTests/PowerPlaywright.IntegrationTests.csproj -c Release --logger console --logger html --results-directory TestResults --collect:"XPlat code coverage" --no-build -- NUnit.NumberOfTestWorkers=${{ vars.TEST_NUMBEROFTESTWORKERS }} Playwright.LaunchOptions.Headless=true
         env:
+          POWERPLAYWRIGHT__TEST__URL:  ${{ secrets[matrix.test_url] }}
           KEYVAULT__URL: ${{ secrets.TEST_KEYVAULT_URL}}
           KEYVAULT__TENANTID: ${{ secrets.TEST_KEYVAULT_TENANTID}}
           KEYVAULT__CLIENTID: ${{ secrets.TEST_KEYVAULT_CLIENTID}} 
@@ -92,7 +102,7 @@ jobs:
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
         with:
-          name: integration-test-results
+          name: integration-test-results-${{ matrix.name }}
           path: TestResults
         if: ${{ always() }}
       - name: Login to Azure
@@ -105,7 +115,7 @@ jobs:
         if: ${{ failure() && steps.azureLogin.conclusion == 'success' }}
         uses: azure/CLI@v2
         with:
-          inlineScript: az storage blob upload-batch --account-name '${{ secrets.AZURE_STORAGE_ACCOUNTNAME }}' --auth-mode login -d 'playwright-traces' -s 'tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0/playwright-traces' --destination-path '${{ github.workflow }}/${{ github.run_number }}_${{ github.run_attempt }}' 
+          inlineScript: az storage blob upload-batch --account-name '${{ secrets.AZURE_STORAGE_ACCOUNTNAME }}' --auth-mode login -d 'playwright-traces' -s 'tests/PowerPlaywright.IntegrationTests/bin/Release/net8.0/playwright-traces' --destination-path '${{ github.workflow }}/${{ github.run_number }}_${{ github.run_attempt }}_${{ matrix.name }}' --overwrite
       - name: Logout of Azure
         if: ${{ failure() && steps.azureLogin.conclusion == 'success' }}
         run: az logout
