--- a/src/PowerPlaywright/PowerPlaywright.csproj
+++ b/src/PowerPlaywright/PowerPlaywright.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
     <PackageReference Include="Microsoft.Playwright" Version="1.49.0" />
     <PackageReference Include="NuGet.Protocol" Version="6.11.0" />
+    <PackageReference Include="Otp.NET" Version="1.4.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.556">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
@@ -65,4 +66,5 @@
       <TfmSpecificPackageFile Include="$(TargetPath)" PackagePath="ref/$(TargetFramework)" />
     </ItemGroup>
   </Target>
+
 </Project>
